kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-website
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: testapp-website
  type: ClusterIP
